@@ -1,5 +1,7 @@
 0.3.0
  - BREAKING CHANGE: major changes in dcnum postprocessing
+ - feat: allow to select whether volume should be computed
+ - feat: allow to select whether flickering correction should be done
  - setup: bump dcnum from 0.17.2 to 0.18.0
 0.2.2
  - maintenance release
